--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ body {
   -ms-overflow-style: none;
 }
 
-.container::-webkit-scrollbar { /* WebKit */
+.card-body::-webkit-scrollbar { /* WebKit */
   width: 0;
   height: 0;
 }
