--- a/index.css
+++ b/index.css
@@ -3,18 +3,45 @@ body {
   font-family: 'Victor Mono', monospace !important;
 }
 
+.main-logo-div {
+  width: 100%;
+  height: 25%;
+}
+
 .main-logo {
   max-width: 85%;
   max-height: 85%;
   object-fit: contain;
 }
 
+.card-viewport {
+  position: absolute;
+  width: 100vw;
+  top: 40%;
+  height: 75%;
+  overflow: hidden;
+  margin-bottom: 1rem
+}
+
 @media only screen and (min-device-width: 450px) {
+  .main-logo-div {
+    width: 100%;
+    height: 40%;
+  }
+
   .main-logo {
     max-width: 70%;
     max-height: 90%;
     padding: 40px;
     object-fit: contain;
+  }
+
+  .card-viewport {
+    position: absolute;
+    width: 100vw;
+    top: 40%;
+    height: 60%;
+    overflow: hidden;
   }
 }
 
