--- a/templates/index.pug
+++ b/templates/index.pug
@@ -11,7 +11,7 @@ head
   script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous")
 
 body(style="background-color: #b6c8d2;")
-  .d-flex.align-items-center.justify-content-center(style="height: 40%; width: 100%;")
+  .d-flex.align-items-center.justify-content-center.main-logo-div
     img.main-logo(src="./chossyposse.png")
 
   .card-viewport
