--- a/public/index.css
+++ b/public/index.css
@@ -3,27 +3,46 @@ body {
   font-family: 'Victor Mono', monospace !important;
 }
 
+.main-logo-div {
+  width: 100%;
+  height: 25%;
+}
+
 .main-logo {
   max-width: 85%;
   max-height: 85%;
   object-fit: contain;
 }
 
+.card-viewport {
+  position: absolute;
+  width: 100vw;
+  top: 25%;
+  height: 75%;
+  overflow: hidden;
+  margin-bottom: 1rem
+}
+
 @media only screen and (min-device-width: 450px) {
+  .main-logo-div {
+    width: 100%;
+    height: 40%;
+  }
+
   .main-logo {
     max-width: 70%;
     max-height: 90%;
     padding: 40px;
     object-fit: contain;
   }
-}
 
-.card-viewport {
-  position: absolute;
-  width: 100vw;
-  top: 40%;
-  height: 60%;
-  overflow: hidden;
+  .card-viewport {
+    position: absolute;
+    width: 100vw;
+    top: 40%;
+    height: 60%;
+    overflow: hidden;
+  }
 }
 
 .card-carrier {
@@ -36,10 +55,22 @@ body {
 
 .card {
   width: 18rem;
+  max-height: 100%;
 }
 
 .card-title {
   margin-left: 0.5rem;
+}
+
+.card-body {
+  overflow-y: scroll !important;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.card-body::-webkit-scrollbar { /* WebKit */
+  width: 0;
+  height: 0;
 }
 
 table {
