--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
 
 .main-logo-div {
   width: 100%;
-  height: 25%;
+  height: 20%;
 }
 
 .main-logo {
@@ -17,8 +17,8 @@ body {
 .card-viewport {
   position: absolute;
   width: 100vw;
-  top: 25%;
-  height: 75%;
+  top: 20%;
+  height: calc(80% - 5px);
   overflow: hidden;
   margin-bottom: 1rem
 }
@@ -80,6 +80,10 @@ table {
 
 tr {
   border-bottom: 1px solid rgba(0,0,0,0.2) !important;
+}
+
+.smaller-text {
+  font-size: smaller;
 }
 
 #card-container {
